# offpolicy_kd

./: .gitignore  CLAUDE.md  README.md  TODO.md  distill.py  eval_scores.txt  eval_scores_gigaholdout.txt  job.sh  offpolicy_kd.py  only_eval_noacc.py  plot.py  plot_working.py  pyproject.toml  requirements.txt  steps.txt  test_eval.py
LUMIdistil/: pyvenv.cfg
examples/external_teacher/: run.bash
mldistill/: chunk.py  offpolicy.py  on_policy_train.py  propsampler.py  regmix.py  sampler.py  standard.py  teach.py  train.py  utils.py
test/: dyna_gemma3_1b.sh  dyna_gemma3_1b_distill.sh  dyna_gemma3_270m.sh  gemma3_12b_pretrained_dyna_none.sh  gemma3_1b_fromscratch_2dyna_none.sh  gemma3_1b_fromscratch_dyna5507_12b.sh  gemma3_1b_fromscratch_dyna_12b.sh  gemma3_1b_fromscratch_dyna_27b.sh  gemma3_1b_fromscratch_giga_12b.sh  gemma3_1b_fromscratch_giga_27b.sh  gemma3_1b_fromscratch_giga_4b.sh  gemma3_1b_pretrained_dyna5507_4b.sh  gemma3_1b_pretrained_dyna_12b.sh  gemma3_1b_pretrained_dyna_none.sh  gemma3_1b_pretrained_giga_12b.sh  gemma3_1b_pretrained_giga_27b.sh  gemma3_27b_pretrained_dyna_none.sh  gemma3_4b_pretrained_dyna_27b.sh  giga_gemma3_1b.sh  giga_gemma3_1b_distill.sh  run_onpolicy.sh  run_onpolicy_S.sh  run_onpolicy_T.sh  run_onpolicy_TS.sh  test.sh  test1.jsonl  test2.jsonl  test_eval.sh  test_eval_packed.sh  tokenize.py
test/gemma3/: train_test1.parquet  val_test2.parquet
test/mixture/: test.txt
test/packed/: gemma3_12b_pretrained_dyna_27b.sh  gemma3_1b_fromscratch_dyna5507_27b.sh  gemma3_1b_fromscratch_dyna5507_4b.sh  gemma3_1b_fromscratch_dyna5507_none.sh  (+10 more)
